--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "stylus-loader": "^3.0.2",
     "vue": "^2.5.2",
     "vue-awesome-swiper": "^2.6.7",
+    "vue-loader": "^13.7.3",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
